--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": " npx ng test --browsers Chrome",
+    "test:ci": "npx ng test --code-coverage  --browsers ChromeHeadless"
   },
   "private": true,
   "dependencies": {
